fix: fixed broken layout

--- a/src/pages/activity/activity.css
+++ b/src/pages/activity/activity.css
@@ -4,10 +4,11 @@
 }
 
 .activity-left {
-  flex-grow: 4;
+  width: 80%;
+  flex-grow: 3;
 }
 .activity-right {
-  flex-grow: 1;
+  flex-grow: 2;
   margin-top: 15px;
   height: fit-content;
   padding: 10px;
